--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^16.13.1",
     "react-collapsed": "^3.0.0",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^7.27.1",
     "react-image-fallback": "^8.0.0",
     "react-number-format": "^4.2.0",
     "react-paginate": "^6.3.2",
@@ -41,7 +42,8 @@
     "styled-components": "^5.1.0",
     "tether": "^1.4.6",
     "uid": "^1.0.0",
-    "yup": "^0.29.1"
+    "yup": "^0.29.1",
+    "zustand": "^3.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
@@ -64,6 +66,6 @@
     "eslint-plugin-react-hooks": "^2.3.0",
     "prettier": "2.0.2",
     "ts-loader": "^7.0.4",
-    "typescript": "^3.8.3"
+    "typescript": "^4.6.2"
   }
 }
